# rtb-telegram-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
src/rtb_telegram_bot/: __init__.py
